# clilm

./: .env.example  .gitignore  README.md  mlxctl.py  pyproject.toml  test_tool_call.sh
